--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "mesto-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "lint": "npx eslint src/**/*.ts",
     "start": "npx dist/app.js",
     "dev": "npx ts-node-dev src/app.ts",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "author": "Akhmadiev Ruslan"
   },
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -25,7 +25,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.3.0",
     "mongoose": "^7.0.5"
   }
 }
