--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "mesto-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": ".dist/app.js",
+  "author": "Akhmadiev Ruslan",
   "scripts": {
     "lint": "npx eslint src/**/*.ts",
     "start": "npx dist/app.js",
     "dev": "npx ts-node-dev src/app.ts",
-    "build": "tsc --build",
-    "author": "Akhmadiev Ruslan"
+    "build": "tsc --build"
   },
   "license": "ISC",
   "devDependencies": {
