--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.0",
+    "@types/validator": "^13.7.15",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.2.0",
@@ -24,7 +27,12 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
-    "mongoose": "^7.0.5"
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.4.0",
+    "mongoose": "^7.0.5",
+    "validator": "^13.9.0"
   }
 }
